# snapcraft-intellisense

./: .gitignore  .vscodeignore  lychee.toml  package.json  pyproject.toml
.github/actions/link-check/: action.yml
.github/workflows/: ci.yml  sync-schema.yml
schemas/: snapcraft.json  urls.json
scripts/: extract_urls.py  sync.py
src/: extension.ts
