[project]
name = "snapcraft-intellisense"
version = "1.0.4"
requires-python = ">=3.13"

[tool.ruff]
line-length = 88
target-version = "1.0.4"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "S101",
  "S104",
  "COM812",
  "ISC001",
  "T20",
  "BLE001",
  "FBT001",
  "PLR0913",
  "RUF012",
  "RET505",
  "S110",
  "EXE001",
  "TRY300",
  "RET504",
  "E501",
  "PLR2004",
  "ARG002",
  "TRY003",
  "EM102",
  "ARG003",
  "ARG001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
